2001-12-09  Adrian Aichner  <adrian@xemacs.org>

	* package-compile.el (package-directory-map): Add clearcase
	package.

2001-12-09  Adrian Aichner  <adrian@xemacs.org>

	* xemacs-packages\Makefile (PACKAGES): Add clearcase package.

2001-09-08  Steve Youngs  <youngs@xemacs.org>

	* package-compile.el (package-directory-map): Add dictionary
	package. 

2001-06-18  Ben Wing  <ben@xemacs.org>

	* Local.rules.template (XEMACS_PACKAGES):
	* Local.rules.template (MULE_PACKAGES):
	Give default values for these variables that will generally work.
	
	* XEmacs.rules (extraclean):
	* XEmacs.rules (distclean):
	* XEmacs.rules (elcclean):
	Document what these mean.

2001-05-15  Steve Youngs  <youngs@xemacs.org>

	* INSTALL: Update to reflect the 'flat' package tree.

	* Local.rules.template: The shell doesn't know that 'nil' means ''.

2001-05-11  Steve Youngs  <youngs@xemacs.org>

	* ./xemacs-packages/Makefile: New.

	* ./xemacs-packages/*/Makefile (CATEGORY): Change to "standard".

	* package-compile.el (package-directory-map): Re-organise.  There are
	now only 2 categories, "xemacs-packages" & "mule-packages".  Also, put
	them into alphabetical order.

	* Makefile (SUBDIRS): The sub directories are now 'xemacs-packages' &
	'mule-packages'.

2001-05-10  Steve Youngs  <youngs@xemacs.org>

	* Local.rules.template: If 'make bindist' STAGING should be set to
	XEMACS_PACKAGES so we don't end up with 2 package-index files.

2001-05-06  Steve Youngs  <youngs@xemacs.org>

	* package-compile.el (package-directory-map): Add Adrian's 'build' package.

	* libs/Makefile (PACKAGES): Ditto.

2001-04-26  Adrian Aichner  <adrian@xemacs.org>

	* XEmacs.rules: Make package building work for Windows native
	XEmacs again.
	* XEmacs.rules (PACKAGE_NET_PACKAGES): New.
	* XEmacs.rules (PACKAGE_STAGING): New.
	* XEmacs.rules (setup-info): Use PACKAGE_NET_PACKAGES and
	PACKAGE_STAGING.

2001-04-20  Ben Wing  <ben@xemacs.org>

	* Local.rules.template (PACKAGE_INDEX): Make sure STAGING is