@@ -1,3 +1,10 @@
+2001-12-17  Steve Youngs  <youngs@xemacs.org>
+
+	* package-compile.el (package-name-to-directory): Add mule-ucs.
+	(package-directory-map): Ditto.
+
+	* mule-packages/Makefile (PACKAGES): Add mule-ucs.
+
 2001-12-09  Adrian Aichner  <adrian@xemacs.org>
 
 	* package-compile.el (package-directory-map): Add clearcase
